feat(yaml-core): output resolution + validation in ModuleExpander
Resolves output templates using module parameter scope during expansion.
Validates: output names (no dots/blanks), template scope (var-only),
resolved value vs declared type. ExpandedModule gains moduleOutputs +
outputSource() for VariableResolver wiring.

Refs #256

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>